[package]
authors = { workspace = true }
categories = ["graphics"]
edition ={ workspace = true }
description = "A example app from the rust_d3_geo package. The app is an example of code that manipulates SVG elements to display a globe."
keywords = ["graphics", "d3-geo"]
name = "rust_d3_geo_example_svg"
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
version = { workspace = true }


[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove web_sys as dependency .. we are just calling into the SVG portion
# of the library ( web-sys is included in the root package
d3_geo_rs = { path = "../../../lib", default-features = false}
geo = { workspace = true }
geo-types = { workspace = true }
gloo-utils = { workspace = true }
js-sys = { workspace = true }
rust_topojson_client = { workspace = true }
topojson = { workspace = true }
wasm-bindgen-test = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
workspace = true
features = [
  "console",
  "Attr",
  "Document",
  "Element",
  "SvgsvgElement",
  "SvgAnimatedLength",
  "SvgLength",
  "SvgPathElement",
  "HtmlElement",
  "HtmlCollection",
  "HtmlInputElement",
  "Node",
  "Performance",
  "PerformanceTiming",
  "PerformanceMeasure",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Text",
  "Window",
]
